[level 1] Title: 신고 결과 받기, Time: 770.91 ms, Memory: 179 MB -BaekjoonHub